# discover

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  COPYING  ChangeLog  DiscoverConfig.h.in  DiscoverVersion.h.in  HaveQZeitgeist.h.in  MR_DESCRIPTION.md  Messages.sh  MuonVersion.h.in  README  README.PACKAGERS  README.md  TODO  discover.categories  extractxml
appiumtests/: CMakeLists.txt  flatpak.py
discover/: AbstractAppsModel.cpp  AbstractAppsModel.h  ApplicationAddonsModel.cpp  ApplicationAddonsModel.h  ApplicationProxyModelHelper.cpp  ApplicationProxyModelHelper.h  ApplicationUpdates.cpp  ApplicationUpdates.h  BackendsSingleton.cpp  BackendsSingleton.h  CMakeLists.txt  CachedNetworkAccessManager.cpp  CachedNetworkAccessManager.h  DiscoverAction.cpp  DiscoverAction.h  DiscoverDeclarativePlugin.cpp  DiscoverDeclarativePlugin.h  DiscoverMainWindow.cpp  DiscoverMainWindow.h  DiscoverObject.cpp  DiscoverObject.h  FeaturedModel.cpp  FeaturedModel.h  FreshCheck.cpp  FreshCheck.h  IconColors.cpp  IconColors.h  LimitedRowCountProxyModel.cpp  LimitedRowCountProxyModel.h  MuonActionGroup.cpp  MuonActionGroup.h  MuonDiscoverMainWindow.cpp  MuonDiscoverMainWindow.h  MuonInstallerMainWindow.cpp  MuonInstallerMainWindow.h  NativeScrollBar.cpp  NativeScrollBar.h  OdrsAppsModel.cpp  OdrsAppsModel.h  OdrsCategoryModel.cpp  (+39 more)
exporter/: CMakeLists.txt  DiscoverExporter.cpp  DiscoverExporter.h  MuonExporter.cpp  MuonExporter.h  main.cpp
installer/: AbstractViewBase.cpp  AbstractViewBase.h  AbstractViewContainer.cpp  AbstractViewContainer.h  Application.cpp  Application.h  ApplicationBackend.cpp  ApplicationBackend.h  ApplicationDetailsWidget.cpp  ApplicationDetailsWidget.h  ApplicationLauncher.cpp  ApplicationLauncher.h  ApplicationWidget.cpp  ApplicationWidget.h  ApplicationWindow.cpp  ApplicationWindow.h  AvailableView.cpp  AvailableView.h  CMakeLists.txt  CategoryDrawer.cpp  CategoryDrawer.h  CategoryModel.cpp  CategoryModel.h  ClickableLabel.cpp  ClickableLabel.h  LaunchListModel.cpp  LaunchListModel.h  MainWindow.cpp  MainWindow.h  OriginView.cpp  OriginView.h  ProgressView.cpp  ProgressView.h  ScreenShotOverlay.cpp  ScreenShotOverlay.h  ScreenShotViewer.cpp  ScreenShotViewer.h  Transaction.h  TransactionListener.cpp  TransactionListener.h  (+6 more)
kcm/: CMakeLists.txt  discoversettings.kcfg  discoversettings.kcfgc  kcm_updates.desktop  kcm_updates.json  updates.cpp  updates.h  updatessettings.kcfg  updatessettings.kcfgc
kded/: CMakeLists.txt  MuonNotifier.cpp  MuonNotifier.h  configwatcher.cpp  configwatcher.h  event.cpp  event.h  muon-notifier.desktop  muon-notifier.notifyrc  org.kubuntu.MuonNotifier.xml
libdiscover/: ActionsModel.cpp  ActionsModel.h  ApplicationAddonsModel.cpp  ApplicationAddonsModel.h  CMakeLists.txt  CachedNetworkAccessManager.cpp  CachedNetworkAccessManager.h  DiscoverBackendsFactory.cpp  DiscoverBackendsFactory.h  EmitWhenChanged.h  LazyIconResolver.cpp  LazyIconResolver.h  MessageActionsModel.cpp  MessageActionsModel.h  MuonDataSources.kcfgc  ScreenshotsModel.cpp  ScreenshotsModel.h  muondatasources.kcfg  utils.h  utilscoro.cpp  utilscoro.h
libmuon/: Application.cpp  Application.h  ApplicationAddonsModel.cpp  ApplicationAddonsModel.h  ApplicationBackend.cpp  ApplicationBackend.h  AptifyMainWindow.cpp  AptifyMainWindow.h  CMakeLists.txt  ChangesDialog.cpp  ChangesDialog.h  CommitWidget.cpp  CommitWidget.h  DetailsWidget.cpp  DetailsWidget.h  DownloadWidget.cpp  DownloadWidget.h  HistoryView.cpp  HistoryView.h  MessageActionsModel.cpp  MessageActionsModel.h  MuonBackendsFactory.cpp  MuonBackendsFactory.h  MuonDataSources.kcfgc  MuonMainWindow.cpp  MuonMainWindow.h  MuonStrings.cpp  MuonStrings.h  QAptActions.cpp  QAptActions.h  QAptIntegration.cpp  QAptIntegration.h  ScreenshotsModel.cpp  ScreenshotsModel.h  StatusWidget.cpp  StatusWidget.h  categories.xml  libmuonprivate_export.h  muonbackendplugin.desktop  muondatasources.kcfg
libmuonapt/: AddRepositoryHelper.cpp  AddRepositoryHelper.h  CMakeLists.txt  ChangesDialog.cpp  ChangesDialog.h  MuonStrings.cpp  MuonStrings.h  QAptActions.cpp  QAptActions.h  libmuonapt_export.h
muon/: CMakeLists.txt  CommitWidget.h  DetailsWidget.cpp  DetailsWidget.h  DownloadWidget.cpp  DownloadWidget.h  FilterWidget.cpp  FilterWidget.h  MainWindow.cpp  MainWindow.h  ManagerWidget.cpp  ManagerWidget.h  ReviewWidget.cpp  ReviewWidget.h  StatusWidget.cpp  StatusWidget.h  TransactionWidget.cpp  TransactionWidget.h  main.cpp  muon.desktop  muonui.rc
muon-mobile/: ApplicationAddonsModel.cpp  ApplicationAddonsModel.h  ApplicationProxyModelHelper.cpp  ApplicationProxyModelHelper.h  ApplicationUpdates.cpp  ApplicationUpdates.h  BackendsSingleton.cpp  BackendsSingleton.h  CMakeLists.txt  MuonInstallerDeclarativeMainWindow.cpp  MuonInstallerDeclarativeMainWindow.h  MuonInstallerMainWindow.cpp  MuonInstallerMainWindow.h  OriginsBackend.cpp  OriginsBackend.h  ReviewsModel.cpp  ReviewsModel.h  main.cpp  muon-installer-qml.desktop  resources.qrc
notifier/: BackendNotifierFactory.cpp  BackendNotifierFactory.h  CMakeLists.txt  DiscoverNotifier.cpp  DiscoverNotifier.h  DiscoverNotifierDeclarativePlugin.cpp  DiscoverNotifierDeclarativePlugin.h  MuonNotifier.cpp  MuonNotifier.desktop  MuonNotifier.h  MuonNotifierDeclarativePlugin.cpp  MuonNotifierDeclarativePlugin.h  MuonNotifierModule.cpp  MuonNotifierModule.h  NotifierItem.cpp  NotifierItem.h  UnattendedUpdates.cpp  UnattendedUpdates.h  main.cpp  org.freedesktop.login1.Manager.xml  org.kde.discover.notifier.desktop.cmake  qmldir
notifierd/: CMakeLists.txt  discover-notifier.json  module.cpp  org.freedesktop.login1.Manager.xml
src/: CMakeLists.txt  CommitWidget.cpp  CommitWidget.h  DetailsWidget.cpp  DetailsWidget.h  DownloadWidget.cpp  DownloadWidget.h  FilterWidget.cpp  FilterWidget.h  GroupStrings.cpp  GroupStrings.h  MainTab.ui  MainWindow.cpp  MainWindow.h  ManagerWidget.cpp  ManagerWidget.h  Messages.sh  MuonMainWindow.cpp  MuonStrings.cpp  MuonStrings.h  ReviewWidget.cpp  ReviewWidget.h  StatusWidget.cpp  StatusWidget.h  main.cpp  muonui.rc  (+1 more)
(+1410 files in other folders)
